--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://archilogic.join.com/jobs/469276-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/469276-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -196,7 +196,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=ca1f0ac71'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=ca1f0ac71'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -224,7 +224,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/1fee3fff-f747-4ebe-a1d6-3a11ef581f06'>Amount - Site Reliability Engineering Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/amount/1fee3fff-f747-4ebe-a1d6-3a11ef581f06'>Amount - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -298,7 +298,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -335,7 +335,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -363,7 +363,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -414,7 +414,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/oJYkbfwW'>LinkedIn Careers - Director of Engineering, Site Reliability Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oJYkbfwW'>LinkedIn Careers - Director of Engineering, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -440,7 +440,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
